--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "core-js": "3.1.4",
-    "flickity": "2.2.1"
+    "swiper": "5.3.6"
   }
 }
